--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+h1 {
+    text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+ display: flex;
+ flex-direction: row;
+ justify-content: center;
+}
+.sub-container{
+    width: 250px;
+    min-height: 50px;
+    padding: 20px;
+    border: 1px solid grey;
+    margin: 10px;
+    text-align: center;
+}
+img {
+    margin: 0 auto;
+    width: 250px;
+    height: 70%;
+}
+
+#count {
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.container p {
+    text-align: center;
+}
+
+button {
+    border: 1px solid purple;
+    background: purple;
+    padding: 10px;
+    color: #fff;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+button:hover {
+    border: 1px solid rgb(54, 4, 54);
+    background: rgb(54, 4, 54);
 }
